Refactor sign_in action to use standardized response formatting; add success and error messages to localization

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,9 @@ en:
     assign_role:
       success: "Role assigned successfully"
       error: "Failed to assign role"
+    sign_in:
+      success: "Sign in successful"
+      error: "Invalid email or password"
   events:
     index:
       success: "Events fetched successfully"
