Implement user registration and sign-out functionality; add corresponding success and error messages to localization

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,6 +85,12 @@ en:
     sign_in:
       success: "Sign in successful"
       error: "Invalid email or password"
+    register:
+      success: "Registration successful"
+      error: "Registration failed"
+    sign_out:
+      success: "Successfully signed out"
+      error: "Sign out failed"
   events:
     index:
       success: "Events fetched successfully"
