--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -164,6 +164,22 @@ en:
     destroy:
       success: "Event type deleted successfully"
       error: "Failed to delete event type"
+  ticket_types:
+    index:
+      success: "Ticket types fetched successfully"
+      error: "Failed to fetch ticket types"
+    show:
+      success: "Ticket type found"
+      error: "Ticket type not found"
+    create:
+      success: "Ticket type created successfully"
+      error: "Failed to create ticket type"
+    update:
+      success: "Ticket type updated successfully"
+      error: "Failed to update ticket type"
+    destroy:
+      success: "Ticket type deleted successfully"
+      error: "Failed to delete ticket type"
   mongoid:
     errors:
       models:
